--- a/src/ui/in-game/player.css
+++ b/src/ui/in-game/player.css
@@ -1,13 +1,13 @@
-.player:nth-child(2) .profile{grid-area: profile1;}
-.player:nth-child(2) .cap-pieces{grid-area: cap-pieces1;}
-.player:nth-child(2) .timer{grid-area: timer1;}
+.player:first-child .profile{grid-area: profile1;}
+.player:first-child .cap-pieces{grid-area: cap-pieces1;}
+.player:first-child .timer{grid-area: timer1;}
 
 .player:nth-child(3) .profile{grid-area: profile2;}
 .player:nth-child(3) .cap-pieces{grid-area: cap-pieces2;}
 .player:nth-child(3) .timer{grid-area: timer2;}
 
 
-.player:nth-child(2){
+.player:first-child{
     display: grid;
     width: fit-content;
     grid-template-areas: 'profile1 cap-pieces1' 'profile1 timer1' ;
@@ -21,7 +21,7 @@
 
 @media screen and (orientation: landscape) {
 
-.player:nth-child(2){
+.player:first-child{
     display: flex;
     flex-direction: column;
 }
